# ecommerce_async_tests

./: .env  .gitignore  README.MD  README.md  config.py  conftest.py  logging_config.yaml  pyproject.toml  pytest.ini
assertions/: __init__.py
assertions/auth/: login.py  register.py
clients/: base_client.py  event_hooks.py  headers.py
data/: __init__.py
data/cases/: register_users.py
fixtures/: auth.py
services/: __init__.py
services/auth/: auth.py  endpoints.py  payloads.py
services/auth/models/: user_register.py
tests/api_tests/auth_tests/: login_tests.py  register_tests.py  user_login_tests.py
utils/: base_helper_func.py  generators.py  helper.py  hooks.py  models.py  paths.py  regex_patterns.py  setup_logger.py
web/: conftest.py  pytest.ini
web/pages/: base_page.py
web/utils/: paths.py
